# new_admin_panel_sprint_2

./: .gitignore
django_api/: pyproject.toml  requirements.txt
django_api/config/: .env_example  settings.py  urls.py
django_api/movies/: admin.py  models.py
django_api/movies/api/v1/: views.py
django_api/movies/api/v1/services/: filters_person.py
django_api/movies/locale/en/LC_MESSAGES/: django.mo  django.po
django_api/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
django_api/movies/migrations/: 0001_initial.py
django_api/movies/services/: abstract_models.py
docker_compose/simple_project/: .env_example  docker-compose.yml
docker_compose/simple_project/app/: Dockerfile
docker_compose/simple_project/app/example/: settings.py
docker_compose/simple_project/app/uwsgi/: uwsgi.ini
docker_compose/simple_project/configs/: nginx.conf  site.conf
