[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["Andrey989 <sergeevandrey98@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry = "1.8.4"
django = "4.2.11"
django-debug-toolbar = "4.4.6"
django-split-settings = "1.3.2"
flake8 = "6.1.0"
isort = "5.13.2"
mccabe = "0.7.0"
psycopg2 = "2.9.10"
pycodestyle = "2.11.1"
pyflakes = "3.1.0"
python-dotenv = "1.0.1"
sqlparse = "0.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
